[gd_scene load_steps=2 format=3 uid="uid://dlmjr3qjkysh7"]

[ext_resource type="Script" uid="uid://bo6pfcrcrbbg1" path="res://ui.gd" id="1_fyqef"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="Score" type="Label" parent="."]
offset_left = 10.0
offset_right = 20.0
offset_bottom = 23.0
scale = Vector2(2, 2)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -24.5
offset_right = 240.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Test Message (Debug)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Click Me"

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_msg_timer_timeout"]
